--- a/index.html
+++ b/index.html
@@ -1,11 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This is my first file</title>
+  <title>Document</title>
 </head>
+
 <body>
-  
+
+  <table border="1" width="100%">
+    <tbody>
+      <tr>
+        <td colspan="2"><b>Header</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="login.html" target="myframe">Login</a>
+          <br>
+          <a href="registration.html" target="myframe">Registration</a>
+        </td>
+        <td>
+          <iframe name="myframe" height="400" width="900" src="./images/fat.jpg"></iframe>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2"><b>Footer</td>
+      </tr>
+    </tbody>
+  </table>
+
 </body>
+
 </html>
