--- a/HTML/login.html
+++ b/HTML/login.html
@@ -14,7 +14,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <input type="email" name="email" placeholder="Enter Email" required>
     <br><br>
-    <label>Enter Password</label>&nbsp;
+    <label>Enter password</label>&nbsp;
     <input type="password" name="password" placeholder="Enter Password" required>
     <br><br><br>
     <input type="submit" name="btn" value="Login">
